# 2.06.00 (51790) May 11, 2011
> added new translation credits features
# 2.05.04 (51719) May 9, 2011
> if clock controls are irrelevant, hide them instead of disabling them
5/9/11 #2853, instead of disabling clock controls, substitute an empty panel of the same size
5/9/11 #2853, restore disabled clock controls
# 2.05.03 (51682) May 9, 2011
5/9/11 #2853, dev version to demonstrate hiding (rather than disabling) the clock controls in the first 2 tabs
# 2.05.02 (51678) May 9, 2011
5/9/11 #2853, fix: disabled clock buttons should not work
# 2.05.01 (51572) May 5, 2011
# 2.05.00 (44219) Sep 20, 2010
> calibrated Field view so that the drop-off is more apparent
9/20/10 #2485, reduce B-field scale to 2.7 so that drop-off is more apparent
# 2.04.01 (44211) Sep 20, 2010
> fixed compass behavior when close to DC electromagnet
9/20/10 #2511, revert #2446 which made compass go crazy when near DC electromagnet
# 2.04.00 (43650) Aug 30, 2010
8/30/10 new production version with fixes for #2236, #2438, #2446
8/30/10 #2236, update data/faraday/bfield/README
8/30/10 #2236, check in MathCAD file for numerical model of bar magnet
# 2.03.08 (43454) Aug 24, 2010
8/24/10 #2236, calibrate ELECTRON_SPEED_SCALE in each module that has a pickup coil
8/24/10 #2236, restore "pickup electron motion scale" developer control
8/24/10 #2467, switch to phetcommon Vector2D, delete local implementation
8/3/10 #2236, set GeneratorModule.CALIBRATION_EMF=26000
# 2.03.07 (42549) Jul 21, 2010
7/21/10 dev version to demonstrate recalibration
7/21/10 #2236, change max length of light rays from 500 to 350 to match behavior of 2.03.00
7/21/10 #2236, perform initial recalibration
7/21/10 #2236, add PickupCoil.calibrateEmf to provide calibration assistance
7/21/10 #2236, delete individual calibration controls on lightbulb, voltmeter and electrons
7/21/10 #2236, add master calibration control, PickupCoil.calibrationEmf
> improved compass behavior for DC electromagnet